created data models, configured DbContext, and seeded demo orders

--- a/OrderViewer.API/appsettings.json
+++ b/OrderViewer.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "OrderViewerConnectionStr": "Server=DESKTOP-NRHMIPO\\SQLEXPRESS;Database=OrderViewerDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
