implement Blazor UI to display and manage orders

--- a/OrderViewer.API/appsettings.json
+++ b/OrderViewer.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "OrderViewerConnectionStr": "Server=DESKTOP-NRHMIPO\\SQLEXPRESS;Database=OrderViewerDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+  "Cors": {
+    "BlazorApp": [ "https://localhost:7160", "https://localhost:7193" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
