update api appsettings

--- a/OrderViewer.API/appsettings.json
+++ b/OrderViewer.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderViewerConnectionStr": "Server=DESKTOP-NRHMIPO\\SQLEXPRESS;Database=OrderViewerDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "OrderViewerConnectionStr": "Server=SQLSERERNAME;Database=OrderViewerDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Cors": {
     "BlazorApp": [ "https://localhost:7160", "https://localhost:7193" ]
